create table UTILISATEUR (ID_UTILISATEUR integer not null auto_increment, admin bit not null, MDP varchar(255) not null, PSEUDO varchar(255) not null, primary key (ID_UTILISATEUR)) engine=InnoDB;
create table UTILISATEUR (ID_UTILISATEUR integer not null auto_increment, admin bit not null, MDP varchar(255) not null, PSEUDO varchar(255) not null, primary key (ID_UTILISATEUR)) engine=InnoDB;
create table UTILISATEUR (ID_UTILISATEUR integer not null auto_increment, admin bit not null, MDP varchar(255) not null, PSEUDO varchar(255) not null, primary key (ID_UTILISATEUR)) engine=InnoDB;
create table UTILISATEUR (ID_UTILISATEUR integer not null auto_increment, admin bit not null, MDP varchar(255) not null, PSEUDO varchar(255) not null, primary key (ID_UTILISATEUR)) engine=InnoDB;
create table UTILISATEUR (ID_UTILISATEUR integer not null auto_increment, admin bit not null, MDP varchar(255) not null, PSEUDO varchar(255) not null, primary key (ID_UTILISATEUR)) engine=InnoDB;
create table UTILISATEUR (ID_UTILISATEUR integer not null auto_increment, admin bit not null, MDP varchar(255) not null, PSEUDO varchar(255) not null, primary key (ID_UTILISATEUR)) engine=InnoDB;
create table UTILISATEUR (ID_UTILISATEUR integer not null auto_increment, admin bit not null, MDP varchar(255) not null, PSEUDO varchar(255) not null, primary key (ID_UTILISATEUR)) engine=InnoDB;
create table UTILISATEUR (admin bit not null, id integer not null, MDP varchar(255) not null, PSEUDO varchar(255) not null, primary key (id)) engine=InnoDB;
create table UTILISATEUR (ID_UTILISATEUR integer not null auto_increment, admin bit not null, MDP varchar(255) not null, PSEUDO varchar(255) not null, primary key (ID_UTILISATEUR)) engine=InnoDB;
create table UTILISATEUR (ID_UTILISATEUR integer not null auto_increment, admin bit not null, MDP varchar(255) not null, PSEUDO varchar(255) not null, primary key (ID_UTILISATEUR)) engine=InnoDB;
create table UTILISATEUR (ID_UTILISATEUR integer not null auto_increment, admin bit not null, MDP varchar(255) not null, PSEUDO varchar(255) not null, primary key (ID_UTILISATEUR)) engine=InnoDB;
create table UTILISATEUR (ID integer not null auto_increment, admin bit not null, MDP varchar(255) not null, PSEUDO varchar(255) not null, primary key (ID)) engine=InnoDB;
create table UTILISATEUR (ID integer not null auto_increment, admin bit not null, MDP varchar(255) not null, PSEUDO varchar(255) not null, primary key (ID)) engine=InnoDB;
create table UTILISATEUR (ID integer not null auto_increment, admin bit not null, MDP varchar(255) not null, PSEUDO varchar(255) not null, primary key (ID)) engine=InnoDB;
create table UTILISATEUR (ID integer not null auto_increment, admin bit not null, MDP varchar(255) not null, PSEUDO varchar(255) not null, primary key (ID)) engine=InnoDB;
create table UTILISATEUR (ID integer not null auto_increment, admin bit not null, MDP varchar(255) not null, PSEUDO varchar(255) not null, primary key (ID)) engine=InnoDB;
create table UTILISATEUR (ID integer not null auto_increment, admin bit not null, MDP varchar(255) not null, PSEUDO varchar(255) not null, primary key (ID)) engine=InnoDB;
create table UTILISATEUR (ID integer not null auto_increment, admin bit not null, MDP varchar(255) not null, PSEUDO varchar(255) not null, primary key (ID)) engine=InnoDB;
create table UTILISATEUR (ID integer not null auto_increment, admin bit not null, MDP varchar(255) not null, PSEUDO varchar(255) not null, primary key (ID)) engine=InnoDB;
create table UTILISATEUR (ID integer not null auto_increment, admin bit not null, MDP varchar(255) not null, PSEUDO varchar(255) not null, primary key (ID)) engine=InnoDB;
create table UTILISATEUR (ID integer not null auto_increment, admin bit not null, MDP varchar(255) not null, PSEUDO varchar(255) not null, primary key (ID)) engine=InnoDB;
create table UTILISATEUR (ID integer not null auto_increment, admin bit not null, MDP varchar(255) not null, PSEUDO varchar(255) not null, primary key (ID)) engine=InnoDB;
create table UTILISATEUR (ID integer not null auto_increment, admin bit not null, MDP varchar(255) not null, PSEUDO varchar(255) not null, primary key (ID)) engine=InnoDB;
create table LOG (ID integer not null auto_increment, note integer not null, trouver bit not null, DATE datetime(6) not null, COMMENTAIRE varchar(255) not null, primary key (ID)) engine=InnoDB;
create table UTILISATEUR (ID integer not null auto_increment, admin bit not null, MDP varchar(255) not null, PSEUDO varchar(255) not null, primary key (ID)) engine=InnoDB;
create table LOG (ID integer not null auto_increment, note integer not null, trouver bit not null, DATE datetime(6) not null, COMMENTAIRE varchar(255) not null, primary key (ID)) engine=InnoDB;
create table UTILISATEUR (ID integer not null auto_increment, admin bit not null, MDP varchar(255) not null, PSEUDO varchar(255) not null, primary key (ID)) engine=InnoDB;
create table LOG (ID integer not null auto_increment, note integer not null, trouver bit not null, DATE datetime(6) not null, COMMENTAIRE varchar(255) not null, primary key (ID)) engine=InnoDB;
create table RESEAU_CACHE (ID integer not null auto_increment, nom varchar(255), primary key (ID)) engine=InnoDB;
create table UTILISATEUR (ID integer not null auto_increment, admin bit not null, MDP varchar(255) not null, PSEUDO varchar(255) not null, primary key (ID)) engine=InnoDB;
create table LOG (ID integer not null auto_increment, note integer not null, trouver bit not null, DATE datetime(6) not null, COMMENTAIRE varchar(255) not null, primary key (ID)) engine=InnoDB;
create table RESEAU_CACHE (ID integer not null auto_increment, nom varchar(255), primary key (ID)) engine=InnoDB;
create table UTILISATEUR (ID integer not null auto_increment, admin bit not null, MDP varchar(255) not null, PSEUDO varchar(255) not null, primary key (ID)) engine=InnoDB;
create table UTILISATEUR_RESEAU_CACHE (RESEAU_CACHE_ID integer not null, UTILISATEUR_ID integer not null) engine=InnoDB;
alter table UTILISATEUR_RESEAU_CACHE add constraint FKi0wpf7911vvxd52bvuusrqm2t foreign key (RESEAU_CACHE_ID) references UTILISATEUR (ID);
alter table UTILISATEUR_RESEAU_CACHE add constraint FK15agwdjrso48n8gk3mnhca8r1 foreign key (UTILISATEUR_ID) references RESEAU_CACHE (ID);
create table LOG (ID integer not null auto_increment, note integer not null, trouver bit not null, DATE datetime(6) not null, COMMENTAIRE varchar(255) not null, primary key (ID)) engine=InnoDB;
create table RESEAU_CACHE (ID integer not null auto_increment, nom varchar(255), primary key (ID)) engine=InnoDB;
create table UTILISATEUR (ID integer not null auto_increment, admin bit not null, MDP varchar(255) not null, PSEUDO varchar(255) not null, primary key (ID)) engine=InnoDB;
create table UTILISATEUR_RESEAU_CACHE (RESEAU_CACHE_ID integer not null, UTILISATEUR_ID integer not null) engine=InnoDB;
alter table UTILISATEUR_RESEAU_CACHE add constraint FKn8v1ymlighjiycw8t873rp2jj foreign key (RESEAU_CACHE_ID) references RESEAU_CACHE (ID);
alter table UTILISATEUR_RESEAU_CACHE add constraint FK6bnfkl3ogld3u7s6pbjkfoyh9 foreign key (UTILISATEUR_ID) references UTILISATEUR (ID);
create table LOG (ID integer not null auto_increment, note integer not null, trouver bit not null, DATE datetime(6) not null, COMMENTAIRE varchar(255) not null, primary key (ID)) engine=InnoDB;
create table RESEAU_CACHE (ID integer not null auto_increment, nom varchar(255), primary key (ID)) engine=InnoDB;
create table UTILISATEUR (ID integer not null auto_increment, admin bit not null, MDP varchar(255) not null, PSEUDO varchar(255) not null, primary key (ID)) engine=InnoDB;
create table UTILISATEUR_RESEAU_CACHE (RESEAU_CACHE_ID integer not null, UTILISATEUR_ID integer not null) engine=InnoDB;
alter table UTILISATEUR_RESEAU_CACHE add constraint FKn8v1ymlighjiycw8t873rp2jj foreign key (RESEAU_CACHE_ID) references RESEAU_CACHE (ID);
alter table UTILISATEUR_RESEAU_CACHE add constraint FK6bnfkl3ogld3u7s6pbjkfoyh9 foreign key (UTILISATEUR_ID) references UTILISATEUR (ID);
create table LOG (ID integer not null auto_increment, note integer not null, trouver bit not null, DATE datetime(6) not null, COMMENTAIRE varchar(255) not null, primary key (ID)) engine=InnoDB;
create table RESEAU_CACHE (ID integer not null auto_increment, nom varchar(255), primary key (ID)) engine=InnoDB;
create table UTILISATEUR (ID integer not null auto_increment, admin bit not null, MDP varchar(255) not null, PSEUDO varchar(255) not null, primary key (ID)) engine=InnoDB;
create table UTILISATEUR_RESEAU_CACHE (RESEAU_CACHE_ID integer not null, UTILISATEUR_ID integer not null) engine=InnoDB;
alter table UTILISATEUR_RESEAU_CACHE add constraint FK6bnfkl3ogld3u7s6pbjkfoyh9 foreign key (UTILISATEUR_ID) references UTILISATEUR (ID);
alter table UTILISATEUR_RESEAU_CACHE add constraint FKn8v1ymlighjiycw8t873rp2jj foreign key (RESEAU_CACHE_ID) references RESEAU_CACHE (ID);
create table LOG (ID integer not null auto_increment, note integer not null, trouver bit not null, DATE datetime(6) not null, COMMENTAIRE varchar(255) not null, primary key (ID)) engine=InnoDB;
create table RESEAU_CACHE (ID integer not null auto_increment, nom varchar(255), primary key (ID)) engine=InnoDB;
create table UTILISATEUR (ID integer not null auto_increment, admin bit not null, MDP varchar(255) not null, PSEUDO varchar(255) not null, primary key (ID)) engine=InnoDB;
create table UTILISATEUR_RESEAU_CACHE (RESEAU_CACHE_ID integer not null, UTILISATEUR_ID integer not null) engine=InnoDB;
alter table UTILISATEUR_RESEAU_CACHE add constraint FK6bnfkl3ogld3u7s6pbjkfoyh9 foreign key (UTILISATEUR_ID) references UTILISATEUR (ID);
alter table UTILISATEUR_RESEAU_CACHE add constraint FKn8v1ymlighjiycw8t873rp2jj foreign key (RESEAU_CACHE_ID) references RESEAU_CACHE (ID);
create table LOG (ID integer not null auto_increment, note integer not null, trouver bit not null, DATE datetime(6) not null, COMMENTAIRE varchar(255) not null, primary key (ID)) engine=InnoDB;
create table RESEAU_CACHE (ID integer not null auto_increment, nom varchar(255), primary key (ID)) engine=InnoDB;
create table UTILISATEUR (ID integer not null auto_increment, admin bit not null, MDP varchar(255) not null, PSEUDO varchar(255) not null, primary key (ID)) engine=InnoDB;
create table UTILISATEUR_RESEAU_CACHE (RESEAU_CACHE_ID integer not null, UTILISATEUR_ID integer not null) engine=InnoDB;
alter table UTILISATEUR_RESEAU_CACHE add constraint FK6bnfkl3ogld3u7s6pbjkfoyh9 foreign key (UTILISATEUR_ID) references UTILISATEUR (ID);
alter table UTILISATEUR_RESEAU_CACHE add constraint FKn8v1ymlighjiycw8t873rp2jj foreign key (RESEAU_CACHE_ID) references RESEAU_CACHE (ID);
create table LOG (ID integer not null auto_increment, note integer not null, trouver bit not null, DATE datetime(6) not null, COMMENTAIRE varchar(255) not null, primary key (ID)) engine=InnoDB;
create table RESEAU_CACHE (ID integer not null auto_increment, nom varchar(255), primary key (ID)) engine=InnoDB;
create table UTILISATEUR (ID integer not null auto_increment, admin bit not null, MDP varchar(255) not null, PSEUDO varchar(255) not null, primary key (ID)) engine=InnoDB;
create table UTILISATEUR_RESEAU_CACHE (RESEAU_CACHE_ID integer not null, UTILISATEUR_ID integer not null) engine=InnoDB;
alter table UTILISATEUR_RESEAU_CACHE add constraint FK6bnfkl3ogld3u7s6pbjkfoyh9 foreign key (UTILISATEUR_ID) references UTILISATEUR (ID);
alter table UTILISATEUR_RESEAU_CACHE add constraint FKn8v1ymlighjiycw8t873rp2jj foreign key (RESEAU_CACHE_ID) references RESEAU_CACHE (ID);
create table LOG (ID integer not null auto_increment, note integer not null, trouver bit not null, DATE datetime(6) not null, COMMENTAIRE varchar(255) not null, primary key (ID)) engine=InnoDB;
create table RESEAU_CACHE (ID integer not null auto_increment, nom varchar(255), primary key (ID)) engine=InnoDB;
create table UTILISATEUR (ID integer not null auto_increment, admin bit not null, MDP varchar(255) not null, PSEUDO varchar(255) not null, primary key (ID)) engine=InnoDB;
create table UTILISATEUR_RESEAU_CACHE (RESEAU_CACHE_ID integer not null, UTILISATEUR_ID integer not null) engine=InnoDB;
alter table UTILISATEUR_RESEAU_CACHE add constraint FK6bnfkl3ogld3u7s6pbjkfoyh9 foreign key (UTILISATEUR_ID) references UTILISATEUR (ID);
alter table UTILISATEUR_RESEAU_CACHE add constraint FKn8v1ymlighjiycw8t873rp2jj foreign key (RESEAU_CACHE_ID) references RESEAU_CACHE (ID);
create table LOG (ID integer not null auto_increment, note integer not null, trouver bit not null, DATE datetime(6) not null, COMMENTAIRE varchar(255) not null, primary key (ID)) engine=InnoDB;
create table RESEAU_CACHE (ID integer not null auto_increment, nom varchar(255), primary key (ID)) engine=InnoDB;
create table UTILISATEUR (ID integer not null auto_increment, admin bit not null, MDP varchar(255) not null, PSEUDO varchar(255) not null, primary key (ID)) engine=InnoDB;
create table UTILISATEUR_RESEAU_CACHE (RESEAU_CACHE_ID integer not null, UTILISATEUR_ID integer not null) engine=InnoDB;
alter table UTILISATEUR_RESEAU_CACHE add constraint FK6bnfkl3ogld3u7s6pbjkfoyh9 foreign key (UTILISATEUR_ID) references UTILISATEUR (ID);
alter table UTILISATEUR_RESEAU_CACHE add constraint FKn8v1ymlighjiycw8t873rp2jj foreign key (RESEAU_CACHE_ID) references RESEAU_CACHE (ID);
create table LOG (ID integer not null auto_increment, note integer not null, trouver bit not null, DATE datetime(6) not null, COMMENTAIRE varchar(255) not null, primary key (ID)) engine=InnoDB;
create table RESEAU_CACHE (ID integer not null auto_increment, nom varchar(255), primary key (ID)) engine=InnoDB;
create table UTILISATEUR (ID integer not null auto_increment, admin bit not null, MDP varchar(255) not null, PSEUDO varchar(255) not null, primary key (ID)) engine=InnoDB;
create table UTILISATEUR_RESEAU_CACHE (RESEAU_CACHE_ID integer not null, UTILISATEUR_ID integer not null) engine=InnoDB;
alter table UTILISATEUR_RESEAU_CACHE add constraint FK6bnfkl3ogld3u7s6pbjkfoyh9 foreign key (UTILISATEUR_ID) references UTILISATEUR (ID);
alter table UTILISATEUR_RESEAU_CACHE add constraint FKn8v1ymlighjiycw8t873rp2jj foreign key (RESEAU_CACHE_ID) references RESEAU_CACHE (ID);
create table LOG (ID integer not null auto_increment, note integer not null, trouver bit not null, DATE datetime(6) not null, COMMENTAIRE varchar(255) not null, primary key (ID)) engine=InnoDB;
create table RESEAU_CACHE (ID integer not null auto_increment, nom varchar(255), primary key (ID)) engine=InnoDB;
create table UTILISATEUR (ID integer not null auto_increment, admin bit not null, MDP varchar(255) not null, PSEUDO varchar(255) not null, primary key (ID)) engine=InnoDB;
create table UTILISATEUR_RESEAU_CACHE (RESEAU_CACHE_ID integer not null, UTILISATEUR_ID integer not null) engine=InnoDB;
alter table UTILISATEUR_RESEAU_CACHE add constraint FK6bnfkl3ogld3u7s6pbjkfoyh9 foreign key (UTILISATEUR_ID) references UTILISATEUR (ID);
alter table UTILISATEUR_RESEAU_CACHE add constraint FKn8v1ymlighjiycw8t873rp2jj foreign key (RESEAU_CACHE_ID) references RESEAU_CACHE (ID);
create table LOG (ID integer not null auto_increment, note integer not null, trouver bit not null, DATE datetime(6) not null, COMMENTAIRE varchar(255) not null, primary key (ID)) engine=InnoDB;
create table RESEAU_CACHE (ID integer not null auto_increment, nom varchar(255), primary key (ID)) engine=InnoDB;
create table UTILISATEUR (ID integer not null auto_increment, admin bit not null, MDP varchar(255) not null, PSEUDO varchar(255) not null, primary key (ID)) engine=InnoDB;
create table UTILISATEUR_RESEAU_CACHE (RESEAU_CACHE_ID integer not null, UTILISATEUR_ID integer not null) engine=InnoDB;
alter table UTILISATEUR_RESEAU_CACHE add constraint FK6bnfkl3ogld3u7s6pbjkfoyh9 foreign key (UTILISATEUR_ID) references UTILISATEUR (ID);
alter table UTILISATEUR_RESEAU_CACHE add constraint FKn8v1ymlighjiycw8t873rp2jj foreign key (RESEAU_CACHE_ID) references RESEAU_CACHE (ID);
create table LOG (ID integer not null auto_increment, note integer not null, trouver bit not null, DATE datetime(6) not null, COMMENTAIRE varchar(255) not null, primary key (ID)) engine=InnoDB;
create table RESEAU_CACHE (ID integer not null auto_increment, nom varchar(255), primary key (ID)) engine=InnoDB;
create table UTILISATEUR (ID integer not null auto_increment, admin bit not null, MDP varchar(255) not null, PSEUDO varchar(255) not null, primary key (ID)) engine=InnoDB;
create table UTILISATEUR_RESEAU_CACHE (RESEAU_CACHE_ID integer not null, UTILISATEUR_ID integer not null) engine=InnoDB;
alter table UTILISATEUR_RESEAU_CACHE add constraint FK6bnfkl3ogld3u7s6pbjkfoyh9 foreign key (UTILISATEUR_ID) references UTILISATEUR (ID);
alter table UTILISATEUR_RESEAU_CACHE add constraint FKn8v1ymlighjiycw8t873rp2jj foreign key (RESEAU_CACHE_ID) references RESEAU_CACHE (ID);
create table LOG (ID integer not null auto_increment, note integer not null, trouver bit not null, DATE datetime(6) not null, COMMENTAIRE varchar(255) not null, primary key (ID)) engine=InnoDB;
create table RESEAU_CACHE (ID integer not null auto_increment, nom varchar(255), primary key (ID)) engine=InnoDB;
create table UTILISATEUR (ID integer not null auto_increment, admin bit not null, MDP varchar(255) not null, PSEUDO varchar(255) not null, primary key (ID)) engine=InnoDB;
create table UTILISATEUR_RESEAU_CACHE (RESEAU_CACHE_ID integer not null, UTILISATEUR_ID integer not null) engine=InnoDB;
alter table UTILISATEUR_RESEAU_CACHE add constraint FK6bnfkl3ogld3u7s6pbjkfoyh9 foreign key (UTILISATEUR_ID) references UTILISATEUR (ID);
alter table UTILISATEUR_RESEAU_CACHE add constraint FKn8v1ymlighjiycw8t873rp2jj foreign key (RESEAU_CACHE_ID) references RESEAU_CACHE (ID);
create table LOG (ID integer not null auto_increment, note integer not null, trouver bit not null, DATE datetime(6) not null, COMMENTAIRE varchar(255) not null, primary key (ID)) engine=InnoDB;
create table RESEAU_CACHE (ID integer not null auto_increment, PROPRIETAIRE_ID integer, nom varchar(255), primary key (ID)) engine=InnoDB;
create table UTILISATEUR (ID integer not null auto_increment, admin bit not null, MDP varchar(255) not null, PSEUDO varchar(255) not null, primary key (ID)) engine=InnoDB;
create table UTILISATEUR_RESEAU_CACHE (RESEAU_CACHE_ID integer not null, UTILISATEUR_ID integer not null) engine=InnoDB;
alter table RESEAU_CACHE add constraint FKkw04y08agena8yq1f1b34cdrd foreign key (PROPRIETAIRE_ID) references UTILISATEUR (ID);
alter table UTILISATEUR_RESEAU_CACHE add constraint FK6bnfkl3ogld3u7s6pbjkfoyh9 foreign key (UTILISATEUR_ID) references UTILISATEUR (ID);
alter table UTILISATEUR_RESEAU_CACHE add constraint FKn8v1ymlighjiycw8t873rp2jj foreign key (RESEAU_CACHE_ID) references RESEAU_CACHE (ID);
create table LOG (ID integer not null auto_increment, note integer not null, trouver bit not null, DATE datetime(6) not null, COMMENTAIRE varchar(255) not null, primary key (ID)) engine=InnoDB;
create table RESEAU_CACHE (ID integer not null auto_increment, PROPRIETAIRE_ID integer, nom varchar(255), primary key (ID)) engine=InnoDB;
create table UTILISATEUR (ID integer not null auto_increment, admin bit not null, MDP varchar(255) not null, PSEUDO varchar(255) not null, primary key (ID)) engine=InnoDB;
create table UTILISATEUR_RESEAU_CACHE (RESEAU_CACHE_ID integer not null, UTILISATEUR_ID integer not null) engine=InnoDB;
alter table RESEAU_CACHE add constraint FKkw04y08agena8yq1f1b34cdrd foreign key (PROPRIETAIRE_ID) references UTILISATEUR (ID);
alter table UTILISATEUR_RESEAU_CACHE add constraint FK6bnfkl3ogld3u7s6pbjkfoyh9 foreign key (UTILISATEUR_ID) references UTILISATEUR (ID);
alter table UTILISATEUR_RESEAU_CACHE add constraint FKn8v1ymlighjiycw8t873rp2jj foreign key (RESEAU_CACHE_ID) references RESEAU_CACHE (ID);
create table LOG (ID integer not null auto_increment, note integer not null, trouver bit not null, DATE datetime(6) not null, COMMENTAIRE varchar(255) not null, primary key (ID)) engine=InnoDB;
create table RESEAU_CACHE (ID integer not null auto_increment, PROPRIETAIRE_ID integer, nom varchar(255), primary key (ID)) engine=InnoDB;
create table UTILISATEUR (ID integer not null auto_increment, admin bit not null, MDP varchar(255) not null, PSEUDO varchar(255) not null, primary key (ID)) engine=InnoDB;
create table UTILISATEUR_RESEAU_CACHE (RESEAU_CACHE_ID integer not null, UTILISATEUR_ID integer not null) engine=InnoDB;
alter table RESEAU_CACHE add constraint FKkw04y08agena8yq1f1b34cdrd foreign key (PROPRIETAIRE_ID) references UTILISATEUR (ID);
alter table UTILISATEUR_RESEAU_CACHE add constraint FK6bnfkl3ogld3u7s6pbjkfoyh9 foreign key (UTILISATEUR_ID) references UTILISATEUR (ID);
alter table UTILISATEUR_RESEAU_CACHE add constraint FKn8v1ymlighjiycw8t873rp2jj foreign key (RESEAU_CACHE_ID) references RESEAU_CACHE (ID);
create table LOG (ID integer not null auto_increment, note integer not null, trouver bit not null, DATE datetime(6) not null, COMMENTAIRE varchar(255) not null, primary key (ID)) engine=InnoDB;
create table RESEAU_CACHE (ID integer not null auto_increment, PROPRIETAIRE_ID integer, nom varchar(255), primary key (ID)) engine=InnoDB;
create table UTILISATEUR (ID integer not null auto_increment, admin bit not null, MDP varchar(255) not null, PSEUDO varchar(255) not null, primary key (ID)) engine=InnoDB;
create table UTILISATEUR_RESEAU_CACHE (RESEAU_CACHE_ID integer not null, UTILISATEUR_ID integer not null) engine=InnoDB;
alter table RESEAU_CACHE add constraint FKkw04y08agena8yq1f1b34cdrd foreign key (PROPRIETAIRE_ID) references UTILISATEUR (ID);
alter table UTILISATEUR_RESEAU_CACHE add constraint FK6bnfkl3ogld3u7s6pbjkfoyh9 foreign key (UTILISATEUR_ID) references UTILISATEUR (ID);
alter table UTILISATEUR_RESEAU_CACHE add constraint FKn8v1ymlighjiycw8t873rp2jj foreign key (RESEAU_CACHE_ID) references RESEAU_CACHE (ID);
create table LOG (ID integer not null auto_increment, PROPRIETAIRE_ID integer, note integer not null, trouver bit not null, DATE datetime(6) not null, COMMENTAIRE varchar(255) not null, primary key (ID)) engine=InnoDB;
create table RESEAU_CACHE (ID integer not null auto_increment, PROPRIETAIRE_ID integer, nom varchar(255), primary key (ID)) engine=InnoDB;
create table UTILISATEUR (ID integer not null auto_increment, admin bit not null, MDP varchar(255) not null, PSEUDO varchar(255) not null, primary key (ID)) engine=InnoDB;
create table UTILISATEUR_RESEAU_CACHE (RESEAU_CACHE_ID integer not null, UTILISATEUR_ID integer not null) engine=InnoDB;
alter table LOG add constraint FKih76wucwm4uf1hqvxs3dcslya foreign key (PROPRIETAIRE_ID) references UTILISATEUR (ID);
alter table RESEAU_CACHE add constraint FKkw04y08agena8yq1f1b34cdrd foreign key (PROPRIETAIRE_ID) references UTILISATEUR (ID);
alter table UTILISATEUR_RESEAU_CACHE add constraint FK6bnfkl3ogld3u7s6pbjkfoyh9 foreign key (UTILISATEUR_ID) references UTILISATEUR (ID);
alter table UTILISATEUR_RESEAU_CACHE add constraint FKn8v1ymlighjiycw8t873rp2jj foreign key (RESEAU_CACHE_ID) references RESEAU_CACHE (ID);
